--- a/_modules/datasift/managed_sources.html
+++ b/_modules/datasift/managed_sources.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.managed_sources &mdash; datasift 2.0.11 documentation</title>
+    <title>datasift.managed_sources &mdash; datasift 2.1.0 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.0.11',
+        VERSION:     '2.1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.0.11 documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.1.0 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.11 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -130,7 +130,6 @@
         <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;id&#39;</span><span class="p">:</span> <span class="n">source_id</span><span class="p">,</span> <span class="s">&#39;auth_ids&#39;</span><span class="p">:</span> <span class="n">auth_ids</span><span class="p">}</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">json</span><span class="p">(</span><span class="s">&#39;remove&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 
-
 </div></div>
 <div class="viewcode-block" id="ManagedSources"><a class="viewcode-back" href="../../datasift.html#datasift.managed_sources.ManagedSources">[docs]</a><span class="k">class</span> <span class="nc">ManagedSources</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot; Represents the DataSift Managed Sources REST API and provides the ability to query it.</span>
@@ -141,7 +140,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">resource</span> <span class="o">=</span> <span class="n">Resource</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">auth</span> <span class="o">=</span> <span class="n">Auth</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
 
-<div class="viewcode-block" id="ManagedSources.create"><a class="viewcode-back" href="../../datasift.html#datasift.managed_sources.ManagedSources.create">[docs]</a>    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">source_type</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">resources</span><span class="p">,</span> <span class="n">auth</span><span class="p">,</span> <span class="n">parameters</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
+<div class="viewcode-block" id="ManagedSources.create"><a class="viewcode-back" href="../../datasift.html#datasift.managed_sources.ManagedSources.create">[docs]</a>    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">source_type</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">resources</span><span class="p">,</span> <span class="n">auth</span><span class="p">,</span> <span class="n">parameters</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">validate</span><span class="o">=</span><span class="bp">True</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Create a managed source</span>
 
 <span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/sourcecreate</span>
@@ -156,13 +155,22 @@
 <span class="sd">            :type auth: list</span>
 <span class="sd">            :param parameters: (optional) dict with config information on how to treat each resource</span>
 <span class="sd">            :type parameters: dict</span>
+<span class="sd">            :param validate: bool to determine if validation should be performed on the source</span>
+<span class="sd">            :type validate: bool</span>
 <span class="sd">            :return: dict of REST API output with headers attached</span>
 <span class="sd">            :rtype: :class:`~datasift.request.DictResponse`</span>
 <span class="sd">            :raises: :class:`~datasift.exceptions.DataSiftApiException`, :class:`requests.exceptions.HTTPError`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">assert</span> <span class="n">resources</span><span class="p">,</span> <span class="s">&quot;Need at least one resource&quot;</span>
         <span class="k">assert</span> <span class="n">auth</span><span class="p">,</span> <span class="s">&quot;Need at least one authentication token&quot;</span>
-        <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;source_type&#39;</span><span class="p">:</span> <span class="n">source_type</span><span class="p">,</span> <span class="s">&#39;name&#39;</span><span class="p">:</span> <span class="n">name</span><span class="p">,</span> <span class="s">&#39;resources&#39;</span><span class="p">:</span> <span class="n">resources</span><span class="p">}</span>
+
+        <span class="n">params</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s">&#39;source_type&#39;</span><span class="p">:</span> <span class="n">source_type</span><span class="p">,</span>
+            <span class="s">&#39;name&#39;</span><span class="p">:</span> <span class="n">name</span><span class="p">,</span>
+            <span class="s">&#39;resources&#39;</span><span class="p">:</span> <span class="n">resources</span><span class="p">,</span>
+            <span class="s">&#39;validate&#39;</span><span class="p">:</span> <span class="n">validate</span>
+        <span class="p">}</span>
+
         <span class="k">if</span> <span class="n">auth</span><span class="p">:</span>
             <span class="n">params</span><span class="p">[</span><span class="s">&#39;auth&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">auth</span>
         <span class="k">if</span> <span class="n">parameters</span><span class="p">:</span>
@@ -320,13 +328,13 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.0.11 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, MediaSift Ltd..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.1.
+        &copy; Copyright 2015, MediaSift Ltd..
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.3.
     </div>
   </body>
 </html>
