--- a/_modules/index.html
+++ b/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; datasift 2.0.11 documentation</title>
+    <title>Overview: module code &mdash; datasift 2.1.0 documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '2.0.11',
+        VERSION:     '2.1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.0.11 documentation" href="../index.html" /> 
+    <link rel="top" title="datasift 2.1.0 documentation" href="../index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -35,7 +35,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">datasift 2.0.11 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">datasift 2.1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -49,12 +49,15 @@
 <li><a href="datasift/exceptions.html">datasift.exceptions</a></li>
 <li><a href="datasift/historics.html">datasift.historics</a></li>
 <li><a href="datasift/historics_preview.html">datasift.historics_preview</a></li>
+<li><a href="datasift/identity.html">datasift.identity</a></li>
 <li><a href="datasift/list.html">datasift.list</a></li>
 <li><a href="datasift/live_stream.html">datasift.live_stream</a></li>
 <li><a href="datasift/managed_sources.html">datasift.managed_sources</a></li>
 <li><a href="datasift/output_mapper.html">datasift.output_mapper</a></li>
 <li><a href="datasift/push.html">datasift.push</a></li>
+<li><a href="datasift/pylon.html">datasift.pylon</a></li>
 <li><a href="datasift/request.html">datasift.request</a></li>
+<li><a href="datasift/token.html">datasift.token</a></li>
 </ul>
 
           </div>
@@ -88,12 +91,12 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">datasift 2.0.11 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">datasift 2.1.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2014, MediaSift Ltd..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.1.
+        &copy; Copyright 2015, MediaSift Ltd..
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.3.
     </div>
   </body>
 </html>
